--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-emojione": "^5.0.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0"
   },
